last visual bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body {
-	background: white;
+	background-color:rgb(214, 197, 197);
 	font-family: 'Press Start 2P', cursive;
 }
 
@@ -19,8 +19,8 @@ body {
 }
 
 .screen {
-	width: 800px;
-	height: 800px;
+	width: 1300px;
+	height: 870px;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -37,7 +37,7 @@ body {
 }
 .playButton {
 	position: fixed;
-	top: 80%;
+	top: 70%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: white;
